# password

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  flake.nix
.direnv/: flake-profile-1-link
frontend/: Bundler.toml  Package.resolved  Package.swift
frontend/Sources/frontend/: ContentView.swift  PasswordStore.swift  frontendApp.swift
schemas/: online_account.json  social_security.json
src/: access_control.rs  encryption.rs  error.rs  lib.rs  main.rs  p2p.rs  rekey.rs  store.rs
src/app/: commands.rs  mod.rs
src/ffi/: error.rs  mod.rs  p2p.rs  store.rs  types.rs
src/models/: account.rs  mod.rs  social_security.rs
src/p2p/: mod.rs
src/ui/: detail.rs  focus.rs  list.rs  mod.rs  overlay.rs  theme.rs
src/versioning/: mod.rs
store/: buma.acc.toml
tests/: p2p.rs  store.rs
