[package]
name = "password"
version = "0.1.0"
edition = "2024"

[dependencies]
celes = "2.6.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
email_address = { version = "0.2.9", features = ["serde"] }
human_name = { version = "2.0.4", features = ["serde", "serde_json"] }
jiff = { version = "0.2.15", features = ["serde"] }
phonenumber = "0.3.7"
ratatui = { version = "0.29.0", features = ["all-widgets", "macros"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
toml = { version = "0.9.8", features = ["serde"] }
url = { version = "2.5.7", features = ["serde"] }
walkdir = "2.5.0"
