[package]
name = "password"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pwd"
path = "src/main.rs"

[lib]
name = "password"
path = "src/lib.rs"

[dependencies]
# Core
anyhow      = "1.0"
thiserror   = "2.0"
bincode     = "1.3"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
toml        = { version = "0.8", features = ["preserve_order"] }
tokio       = { version = "1.49", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "signal"] }

# Type-safe domain types
email_address = { version = "0.2.9", features = ["serde"] }
url           = { version = "2.5",   features = ["serde"] }
phonenumber   = "0.3.7"
celes         = "2.6"

jiff          = { version = "0.2.15", features = ["serde"] }

# Versioning
pijul-at-core        = "1.0.0-beta.11"
pijul-at-config      = "1.0.0-beta.11"
pijul-at-repository  = "1.0.0-beta.11"
tempfile             = "3.20"
canonical-path       = "2.0"
rand                 = "0.10"

# P2P
iroh        = "0.97.0"
iroh-blobs  = "0.99.0"
iroh-docs   = "0.97.0"
iroh-gossip = "0.97.0"
futures-lite = "2.6"

# CLI
clap        = { version = "4.5", features = ["derive", "color", "env"] }

# Typify-generated models
typify   = { version = "0.4", optional = true }
schemars = "0.8"
imara-diff = "0.1.8"
dirs = "6.0.0"

[build-dependencies]
typify       = "0.4"
serde_json   = "1.0"
schemars     = "0.8"
prettyplease = "0.2"
syn          = { version = "2", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
